data/steps/expose-web-api-service/web-api-gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-gw-vs
spec:
  hosts:
  - "istioexplained.io"
  gateways:
  - web-api-gateway
  http:
  - route:
    - destination:
        host: web-api.default.svc.cluster.local
        port:
          number: 8080
